--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "pm2 start pm2.json",
-    "stop": "pm2 stop pm2.json",
+    "stop": "pm2 delete pm2.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
